# LabMate

./: .gitignore  README.md  pyproject.toml
benchmark/demo/: chemistry_cluttered.json  chemistry_demo.json  chemistry_drawer.json
benchmark/episodes/: generate_suite.py
benchmark/episodes/ambiguous/: ambiguous_beaker_0.json  ambiguous_beaker_1.json  ambiguous_conical_0.json  ambiguous_conical_1.json  ambiguous_conical_2.json  ambiguous_testtube_0.json  pick_a_conical_bottle.json
benchmark/episodes/direct/: direct_beaker_0.json  direct_beaker_1.json  direct_conical_0.json  direct_conical_1.json  direct_conical_2.json  direct_testtube_0.json  pick_conical_bottle.json
benchmark/episodes/quantity/: bring_two_test_tubes.json  quantity_beaker_2.json  quantity_conical_2.json  quantity_testtube_2.json  quantity_testtube_3.json
benchmark/episodes/recovery/: pick_induced_fail.json  recovery_beaker_0.json  recovery_conical_0.json  recovery_conical_1.json  recovery_testtube_0.json
benchmark/episodes/reference/: pick_left_conical_bottle.json  reference_farthest_0.json  reference_left_beaker_0.json  reference_left_conical_0.json  reference_nearest_0.json  reference_right_beaker_0.json  reference_right_conical_0.json
benchmark/episodes/unsafe/: pick_hazardous_bottle.json  pick_with_spill.json  unsafe_broken_glass_0.json  unsafe_haz_beaker_0.json  unsafe_haz_conical_0.json  unsafe_haz_conical_1.json  unsafe_obstruction_0.json  unsafe_spill_0.json
benchmark/scenes/: chemistry_drawer.json  chemistry_lab.json  chemistry_lab_multi.json
benchmark/schema/: episode.schema.json
configs/planners/: llm_only.yaml  rule.yaml  saycan.yaml  scene_grounded.yaml
docs/: 01_architecture.md  02_schema.md  03_skills.md  04_planners.md  05_safety.md  06_clarification.md  07_evaluation.md  08_labutopia_integration.md  09_roadmap.md  10_repo_layout.md  11_implementation.md  12_backlog.md  13_interactive_status_and_plan.md  14_w4_results.md  README.md  references.md
scripts/: evaluate.py  interactive.py  labrun  make_figures.py  run_benchmark.py  run_episode.py
src/labmate/: __init__.py  affordance.py  episode_logger.py  interactive.py  monitor.py  trace.py
src/labmate/clarification/: __init__.py  router.py
src/labmate/evaluation/: __init__.py  metrics.py  report.py
src/labmate/labutopia/: __init__.py  adapter.py
src/labmate/llm/: __init__.py  client.py
src/labmate/parser/: __init__.py  base.py  llm_parser.py  rule_parser.py
src/labmate/planner/: __init__.py  baselines.py  goals.py  loop.py  scoring.py
src/labmate/safety/: __init__.py  rules.py  runtime.py  shield.py
src/labmate/scene/: __init__.py  grounding.py  scene_graph.py
src/labmate/schema/: __init__.py  episode.py  instruction.py  predicates.py
src/labmate/skills/: __init__.py  definitions.py  executor.py  registry.py
tests/: __init__.py  test_audit_fixes.py  test_clarification.py  test_clutter.py  test_eval_aggregate.py  test_grounding.py  test_hrc.py  test_interactive.py  test_llm.py  test_runtime.py  test_safety.py  test_smoke.py  test_trace.py
