[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "labmate"
version = "0.0.1"
description = "A clarification- and safety-aware benchmark + execution framework for natural-language human-robot collaboration in scientific laboratories."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core (CPU-only, no Isaac Sim) — keep the framework testable without the simulator.
    "pydantic>=2",       # schema validation (02_schema.md)
    "jsonschema>=4",     # benchmark episode validation
    "hydra-core>=1.3",   # configs (match LabUtopia)
    "numpy",
    # LLM client is provider-agnostic; add the concrete SDK you use, e.g.:
    # "openai", "anthropic"
]

# Simulator-dependent extras live behind the labutopia/ adapter and are NOT required to
# develop/test the framework. Install separately in the Isaac Sim environment.
[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
