[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "labmate"
version = "0.0.1"
description = "A clarification- and safety-aware benchmark + execution framework for natural-language human-robot collaboration in scientific laboratories."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Keep LabMate's own deps minimal: it is `uv pip install -e .`-ed into the SAME uv venv
    # that already has Isaac Sim + LabUtopia, so avoid anything likely to conflict.
    # Use stdlib `dataclasses` for schema objects (no pydantic — Isaac Sim may pin pydantic v1).
    "jsonschema>=4",     # benchmark episode validation (small, pure-python)
    "hydra-core",        # configs (LabUtopia already provides it; unpinned to reuse)
    "numpy",             # unpinned — reuse the version already in the sim venv
    # LLM client is provider-agnostic; add the SDK you use, e.g. "openai" / "anthropic".
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
