[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "labmate"
version = "0.0.1"
description = "A clarification- and safety-aware benchmark + execution framework for natural-language human-robot collaboration in scientific laboratories."
readme = "README.md"
# Isaac Sim 5.1 ships cp311 wheels only — pin the interpreter to 3.11.
requires-python = ">=3.11,<3.12"

# ---------------------------------------------------------------------------
# ONE unified environment: Isaac Sim + LabUtopia + LabMate live in the same
# project-local `.venv`, managed natively by uv (`uv sync` / `uv run`; no conda,
# no manual `source`). Versions reproduce the known-good ARM64 (GB10 / aarch64)
# setup: torch 2.9.0+cu130, isaacsim 5.1.0.0, numpy 1.26.0.
#
# NOTE: LabUtopia's README targets x86 + CUDA 12.6 (cu126). On this aarch64 /
# CUDA-13 machine the working build is cu130 — that is what we pin here.
# ---------------------------------------------------------------------------
dependencies = [
    # --- simulator stack ---------------------------------------------------
    "isaacsim[all,extscache]==5.1.0",     # NVIDIA Isaac Sim 5.1 (from pypi.nvidia.com)
    "torch==2.9.0",                       # cu130 build (see [tool.uv.sources])
    "torchvision==0.24.0",
    "torchaudio==2.9.0",

    # --- LabUtopia requirements.txt (mirrored so the unified venv runs it) --
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "h5py==3.15.1",
    "numcodecs==0.16.5",
    "opencv-python==4.9.0.80",
    "pandas==2.3.3",
    "scipy==1.15.3",
    "zarr==3.1.5",
    "tqdm==4.67.1",
    "einops==0.8.1",
    "wandb==0.23.1",
    "threadpoolctl==3.6.0",
    "matplotlib==3.10.3",
    "dill==0.4.0",
    "pydantic==2.11.10",
    "rtree==1.3.0",
    "diffusers==0.35.2",
    "pytorch-lightning==1.9.5",
    "lightning-bolts==0.7.0",
    "tyro==0.8.5",
    "typing_extensions==4.12.2",
    "numpy==1.26.0",
    "sentry-sdk==2.29.1",

    # --- LabMate's own deps ------------------------------------------------
    "jsonschema>=4",     # benchmark episode validation (small, pure-python)
    # LLM client is provider-agnostic; add the SDK you use, e.g. "openai" / "anthropic".
]

[dependency-groups]
dev = ["pytest", "ruff"]

# ---------------------------------------------------------------------------
# uv resolution: torch trio comes from the PyTorch cu130 index; isaacsim and
# its ~25 sub-packages + CUDA libs come from the NVIDIA index. `unsafe-best-match`
# mirrors pip's --extra-index-url behaviour (pick the highest compatible version
# across indexes), which is how the known-good venv was built.
# ---------------------------------------------------------------------------
[tool.uv]
# Runtime is managed by mise (see ./mise.toml -> python 3.11), NOT by uv. uv only
# manages packages: use the interpreter mise puts on PATH and never download its own.
python-preference = "only-system"
python-downloads = "never"
index-strategy = "unsafe-best-match"
# Only ever resolve/lock for this machine's platform (GB10 / aarch64 Linux).
# Without this, uv also solves a macOS/x86 split that has no isaacsim wheels.
environments = ["sys_platform == 'linux' and platform_machine == 'aarch64'"]
# isaacsim 5.1 pins an older torch stack (torch 2.7 / torchvision 0.22). On this
# aarch64 / CUDA-13 box the proven build is the newer 2.9.0+cu130 trio, which runs
# fine against isaacsim at runtime. Force it past isaacsim's conservative pins —
# this mirrors how the known-good venv was actually built.
override-dependencies = [
    "torch==2.9.0",
    "torchvision==0.24.0",
    "torchaudio==2.9.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true            # only used for the packages bound below

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["labmate*"]     # the cloned src/labutopia/ is NOT a labmate package

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
